--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -66,3 +66,6 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+# nelmio api doc
+nelmio_api_doc: ~
