--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "nelmio/api-doc-bundle": "^2.13",
         "friendsofsymfony/rest-bundle": "^2.1",
-        "jms/serializer-bundle": "^1.1"
+        "jms/serializer-bundle": "^1.1",
+        "eightpoints/guzzle-bundle": "^4.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
