add rest tracking routing

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -17,3 +17,7 @@ default:
 users:
     type:     rest
     resource: LBSS\MyAngularApiBundle\Controller\UserController
+
+tracking:
+    type:     rest
+    resource: LBSS\MyAngularApiBundle\Controller\TrackingController
