--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -32,7 +32,7 @@ framework:
     http_method_override: true
     assets: ~
     serializer:
-        enabled: true
+        enabled: false
 
 # Twig Configuration
 twig:
@@ -86,3 +86,11 @@ fos_rest:
             - { path: '^/', priorities: ['json', 'xml'], fallback_format: 'json', prefer_extension: false  } 
     body_listener:
         enabled: true
+    serializer:
+        serialize_null:  true
+
+jms_serializer:
+    handlers:
+        datetime:
+            default_format: "Y-m-d\\TH:i:sP"
+            default_timezone: "UTC"
