--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -13,6 +13,10 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
+        dev:
+            pattern: ^/api/doc
+            security: false
+
         main:
             anonymous: ~
             # activate different ways to authenticate
