--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -80,10 +80,9 @@ fos_rest:
         view_response_listener: true
         formats:
             json: true
-            xml: true
     format_listener:
         rules:
-            - { path: '^/', priorities: ['json', 'xml'], fallback_format: 'json', prefer_extension: false  } 
+            - { path: '^/', priorities: ['json'], fallback_format: 'json', prefer_extension: false  } 
     body_listener:
         enabled: true
     serializer:
