--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "nelmio/api-doc-bundle": "^2.13",
         "friendsofsymfony/rest-bundle": "^2.1",
         "jms/serializer-bundle": "^1.1",
-        "eightpoints/guzzle-bundle": "^4.5"
+        "eightpoints/guzzle-bundle": "^4.5",
+        "nelmio/cors-bundle": "^1.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
